# normalurl

./: README.md  normalurl.py  pyproject.toml  tests.py
