[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "parseurl"
authors = [{ name = "baterflyrity", email = "baterflyrity@yandex.ru" }]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/baterflyrity/parseurl"
Issues = "https://github.com/baterflyrity/parseurl/issues"
